--- a/index.html
+++ b/index.html
@@ -72,25 +72,31 @@
       >
         <div class="flex-1 mx-auto">
           <a
+            href="https://t.me/BacManOnBase"
+            target="_blank"
             class="bg-primaryOrange px-8 py-3 w-full text-center rounded-lg hover:bg-orange-600 transition cursor-pointer"
             >Telegram</a
           >
         </div>
         <div class="flex-1 mx-auto">
           <a
+            href="https://twitter.com/bacmanbase"
+            target="_blank"
             class="bg-primaryOrange px-8 py-3 w-full text-center rounded-lg hover:bg-orange-600 transition cursor-pointer"
             >Twitter</a
           >
         </div>
         <div class="flex-1 mx-auto">
           <a
+            href="https://dexscreener.com/base/0x8a01975b7993e70debef344681ef49049aa95e3a"
+            target="_blank"
             class="bg-primaryOrange px-8 py-3 w-full text-center rounded-lg hover:bg-orange-600 transition cursor-pointer"
             >Dexscreener</a
           >
         </div>
       </div>
       <div class="text-center mt-16 text-primaryBlue">
-        <p>CA: 0x00000000000000000000000</p>
+        <p>CA: 0xc14C85318553202384398Fd6F76AdE6dcE8b630c</p>
       </div>
       <!-- Base logo and tokenomics -->
       <div
