--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         </div>
       </div>
       <div class="text-center mt-16 text-primaryBlue">
-        <p>CA: 0xc14C85318553202384398Fd6F76AdE6dcE8b630c</p>
+        <p class="hidden md:block text-sm">
+          CA: 0xc14C85318553202384398Fd6F76AdE6dcE8b630c
+        </p>
       </div>
       <!-- Base logo and tokenomics -->
       <div
