--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
         </div>
       </div>
       <!-- Game -->
-      <div class="hidden md:block mt-16">
+      <h2 class="text-center mt-16">THE GAME</h2>
+      <div class="flex flex-col sm:hidden mt-16 mx-4 text-center">
+        <h2 class="text-sm">PLAY THE BACMAN GAME ON DESKTOP</h2>
+
+      </div>
+      <div class="hidden sm:block">
         <div class="w-[400px] mx-auto">
           <!-- <img src="assets/logo-transparent.svg" alt="logo" class="logo" /> -->
-          <h2 class="text-center">THE GAME</h2>
 
           <div id="pacman"></div>
           <script src="pacman.js"></script>
